implement modal and return data from entries

--- a/src/app/new-round/new-round.component.html
+++ b/src/app/new-round/new-round.component.html
@@ -6,4 +6,19 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div class="landing-page-content">
+    <p>
+      Nulla porttitor massa id neque aliquam vestibulum morbi. Nulla at volutpat diam ut venenatis. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Adipiscing tristique risus nec feugiat in fermentum posuere urna.
+    </p>
+    <p>
+      Nulla porttitor massa id neque aliquam vestibulum morbi. Nulla at volutpat diam ut venenatis. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Adipiscing tristique risus nec feugiat in fermentum posuere urna.
+    </p>
+    <p>
+      Nulla porttitor massa id neque aliquam vestibulum morbi. Nulla at volutpat diam ut venenatis. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Adipiscing tristique risus nec feugiat in fermentum posuere urna.
+    </p>
+  </div>
+  <div class="add-round-button">
+    <ion-button expand="full" color="medium" (click)="postNewRound()">Add A New Round</ion-button>
+  </div>
+</ion-content>
