--- a/src/app/new-round/new-round.component.html
+++ b/src/app/new-round/new-round.component.html
@@ -23,7 +23,7 @@
       </p>
     </div>
     <div class="add-round-button">
-      <ion-button expand="full" color="medium" (click)="postNewRound()">Add A New Round</ion-button>
+      <ion-button expand="full" color="medium" (click)="postNewRound()">Add New Round</ion-button>
     </div>
   </div>
 </ion-content>
