created new service, refactored and tested

--- a/src/app/history/history-details/history-details.component.html
+++ b/src/app/history/history-details/history-details.component.html
@@ -15,6 +15,6 @@
     <ion-button expand="full" color="medium" [routerLink]="['../../tabs/history']">Back To History</ion-button>
   </div>
   <div class="edit-round-button">
-    <ion-button expand="full" color="medium" (click)="editRound(round)">Edit Round</ion-button>
+    <ion-button expand="full" color="medium" (click)="presentEditRoundForm(round)">Edit Round</ion-button>
   </div>
 </div>
