--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,11 @@
       <ion-icon name="list"></ion-icon>
       <ion-label>History</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="stats">
+      <ion-icon name="stats"></ion-icon>
+      <ion-label>Stats</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
