--- a/src/app/new-round/new-round.component.html
+++ b/src/app/new-round/new-round.component.html
@@ -9,9 +9,6 @@
 <ion-content>
   <div class="landing-page-content">
     <div>
-      <h3>New Rounds</h3>
-    </div>
-    <div>
       <p>
         Nulla porttitor massa id neque aliquam vestibulum morbi. Nulla at volutpat diam ut venenatis. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Adipiscing tristique risus nec feugiat in fermentum posuere urna.
       </p>
@@ -23,7 +20,7 @@
       </p>
     </div>
     <div class="add-round-button">
-      <ion-button expand="full" color="medium" (click)="postNewRound()">Add New Round</ion-button>
+      <ion-button expand="full" color="medium" (click)="presentNewRoundForm()">Add New Round</ion-button>
     </div>
   </div>
 </ion-content>
