pre-populate date in edit form

--- a/src/app/history/history-details/history-details.component.html
+++ b/src/app/history/history-details/history-details.component.html
@@ -1,7 +1,7 @@
 <div class="landing-page-content">
   <h3>Round Details</h3>
   <p *ngIf="round">
-    Date: {{ round.date }}<br> 
+    Date: {{ round.date |  date: 'M/dd/yyyy' }}<br> 
     Course: {{ round.course }}<br>
     Score: {{ round.score }}<br>
     Fwys: {{ round.fairwaysInReg }}<br>
