add user component and start user service and login form

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
+    
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
@@ -20,6 +20,11 @@
       <ion-icon name="stats"></ion-icon>
       <ion-label>Stats</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
 
+    <ion-tab-button tab="user">
+      <ion-icon name="contact"></ion-icon>
+      <ion-label>Login</ion-label>
+    </ion-tab-button>
+  
+  </ion-tab-bar>
 </ion-tabs>
