--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,14 +10,24 @@
   <div class="landing-page-content">
     <ion-item>
       <ion-label position="floating">Email Address</ion-label>
-      <ion-input type="text" [(ngModel)]="emailAddress"></ion-input>
+      <ion-input type="text" [(ngModel)]="email"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
       <ion-input type="text" [(ngModel)]="password"></ion-input>
     </ion-item>
+    <div>
+      <p class="no-account-message">
+        <i>
+          Don't have a login? Create one.
+        </i>
+      </p>
+    </div>
     <div class="button-container">
       <ion-button expand="full" color="medium" size="medium" (click)="login()">Login</ion-button>
+    </div>
+    <div class="button-container">
+      <ion-button expand="full" color="medium" size="medium" [routerLink]="['/create-user']">Create User</ion-button>
     </div>
   </div>
 </ion-content>
