--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -14,7 +14,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="text" [(ngModel)]="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
     <div>
       <p class="no-account-message">
