add title to details page and some basic formatting

--- a/src/app/stat-details/stat-details.component.html
+++ b/src/app/stat-details/stat-details.component.html
@@ -1,6 +1,6 @@
 <div class="round-input-fields">
   <div>
-    <h3> Insert Title Here </h3>
+    <h3>{{ title }}</h3>
   </div>
   <ion-content>
     <div class="landing-page-content">
@@ -9,7 +9,7 @@
           <p class="stat-details">
             <span class="details">{{ stat.date |  date: 'M/dd/yyyy' }}</span>
             <span class="details">{{ stat.course }}</span>
-            <span class="score-span">{{ stat.stat }}</span>
+            <span class="stat-span">{{ stat.stat }}</span>
           </p>
         </div>
       </div>
