remove commented out code, add enum file and reference

--- a/src/app/stat-details/stat-details.component.html
+++ b/src/app/stat-details/stat-details.component.html
@@ -1,5 +1,5 @@
 <div class="round-input-fields">
-  <div>
+  <div class="stat-title">
     <h3>{{ title }}</h3>
   </div>
   <ion-content>
@@ -15,7 +15,7 @@
       </div>
     </div>
   </ion-content>
-  <div class="button-container">
+  <div class="button-container back-to-stats-btn">
     <ion-button expand="full" color="medium" size="medium" (click)="cancel()">Back To Stats</ion-button>
   </div>
 </div>
