--- a/src/app/stat-details/stat-details.component.html
+++ b/src/app/stat-details/stat-details.component.html
@@ -4,8 +4,8 @@
   </div>
   <ion-content>
     <div class="landing-page-content">
-      <div *ngIf="statDetails.length > 0">
-        <div *ngFor="let stat of statDetails">
+      <div *ngIf="statDetails.detailsPackage.length > 0">
+        <div *ngFor="let stat of statDetails.detailsPackage">
           <p class="stat-details">
             <span class="details">{{ stat.date |  date: 'M/dd/yyyy' }}</span>
             <span class="details">{{ stat.course }}</span>
