--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -9,14 +9,17 @@
 <ion-content>
   <div class="landing-page-content">
     <div *ngIf="rounds.length > 0">
-      <div *ngFor="let round of rounds">
-        <p class="round-details">
-          <span class="details">{{ round.date |  date: 'M/dd/yyyy' }}</span>
-          <span class="details">{{ round.course }}</span>
-          <span class="score-span"><span *ngIf="round.nineHoleRound">(9)&nbsp;</span>{{ round.score }}</span>
-        </p>
-        <div class="edit-round-button">
-          <ion-button expand="full" color="medium" [routerLink]="['/round-details', round._id]">View Round</ion-button>
+      <div *ngFor="let section of yearlyRounds">
+        <p class="year">{{ section.year }}</p>
+        <div *ngFor="let round of section.rounds">
+          <p class="round-details">
+            <span class="details">{{ round.date |  date: 'M/dd/yyyy' }}</span>
+            <span class="details">{{ round.course }}</span>
+            <span class="score-span"><span *ngIf="round.nineHoleRound">(9)&nbsp;</span>{{ round.score }}</span>
+          </p>
+          <div class="edit-round-button">
+            <ion-button expand="full" color="medium" [routerLink]="['/round-details', round._id]">View Round</ion-button>
+          </div>
         </div>
       </div>
     </div>
