--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -6,20 +6,24 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="rounds.length > 0">
+  <div class="past-year-links">
+    <p></p>
+    <span *ngFor="let year of availableYears">
+      <span (click)="showSelectedYear(year)" class="specific-year" [ngClass]="{'show-underline': year == selectedYear}">{{ year }}</span>
+    </span>
+  </div>
   <div class="landing-page-content">
-    <div *ngIf="rounds.length > 0">
-      <div *ngFor="let section of yearlyRounds">
-        <p class="year">{{ section.year }}</p>
-        <div *ngFor="let round of section.rounds">
-          <p class="round-details">
+    <div>
+      <p class="year">{{ yearlyRounds.year }}</p>
+      <div class="month-review" *ngFor="let month of yearlyRounds.months">
+        <p class="month">{{ month.title }}</p>
+        <div *ngFor="let round of month.rounds">
+          <p class="round-details" [routerLink]="['/round-details', round._id]">
             <span class="details">{{ round.date |  date: 'M/dd/yyyy' }}</span>
             <span class="details">{{ round.course }}</span>
             <span class="score-span"><span *ngIf="round.nineHoleRound">(9)&nbsp;</span>{{ round.score }}</span>
           </p>
-          <div class="edit-round-button">
-            <ion-button expand="full" color="medium" [routerLink]="['/round-details', round._id]">View Round</ion-button>
-          </div>
         </div>
       </div>
     </div>
