renamed component, adding courses flow, new and selected

--- a/src/app/new-course/new-course.component.html
+++ b/src/app/new-course/new-course.component.html
@@ -1,3 +1,8 @@
-<p>
-  new-course works!
-</p>
+<ion-content>
+  <div class="landing-page-content">
+    <h3> {{ 'Add New Course' }}</h3>
+  </div>
+  <div class="button-container">
+    <ion-button expand="full" color="medium" size="medium" (click)="cancel()">Cancel</ion-button>
+  </div>
+</ion-content>
