adding course models and hooking up ion slides for input

--- a/src/app/new-course/new-course.component.html
+++ b/src/app/new-course/new-course.component.html
@@ -2,7 +2,35 @@
   <div class="landing-page-content">
     <h3> {{ 'Add New Course' }}</h3>
   </div>
+  <div class="course-name">
+    <ion-item>
+      <ion-label position="floating">Course Name</ion-label>
+      <ion-input type="text" [(ngModel)]="courseName"></ion-input>
+    </ion-item>
+  </div>
+  <div class="course-location">
+    <ion-item>
+      <ion-label position="floating">Course State</ion-label>
+      <ion-input type="text" [(ngModel)]="state"></ion-input>
+    </ion-item>
+  </div>
+  <div *ngIf="holes.length > 0">
+    <ion-slides pager="true" [options]="slideOpts">
+      <div class="course-holes">
+        <ion-slide *ngFor="let hole of holes; let index = index; trackBy: trackByFn" (click)="move($event)">
+          <ion-item>
+            <p>Hole - {{ hole.number }}</p>
+            <ion-label position="floating">Yardage</ion-label>
+            <ion-input type="text" [(ngModel)]="hole.yardage"></ion-input>
+            <ion-label position="floating">Par</ion-label>
+            <ion-input type="text" [(ngModel)]="hole.par"></ion-input>
+          </ion-item>
+        </ion-slide>
+      </div>
+    </ion-slides>
+  </div>
   <div class="button-container">
+    <ion-button expand="full" color="medium" size="medium" (click)="submit()">Submit</ion-button>
     <ion-button expand="full" color="medium" size="medium" (click)="cancel()">Cancel</ion-button>
   </div>
 </ion-content>
