--- a/src/app/new-course/new-course.component.html
+++ b/src/app/new-course/new-course.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+
   <div class="landing-page-content">
     <h3> {{ 'Add New Course' }}</h3>
   </div>
@@ -14,23 +14,29 @@
       <ion-input type="text" [(ngModel)]="state"></ion-input>
     </ion-item>
   </div>
-  <div *ngIf="holes.length > 0">
-    <ion-slides pager="true" [options]="slideOpts">
-      <div class="course-holes">
-        <ion-slide *ngFor="let hole of holes; let index = index; trackBy: trackByFn" (click)="move($event)">
-          <ion-item>
-            <p>Hole - {{ hole.number }}</p>
-            <ion-label position="floating">Yardage</ion-label>
-            <ion-input type="text" [(ngModel)]="hole.yardage"></ion-input>
-            <ion-label position="floating">Par</ion-label>
-            <ion-input type="text" [(ngModel)]="hole.par"></ion-input>
-          </ion-item>
-        </ion-slide>
-      </div>
-    </ion-slides>
+  <div>
+    <div class="course-holes" *ngFor="let hole of holes; let i = index">
+      <ion-card *ngIf="showCard(i)">
+          <ion-card-header>
+            <ion-card-title>
+              <p>Hole - {{ hole.number }}</p>
+            </ion-card-title>
+            <ion-card-content>
+              <ion-item>
+                <ion-label position="floating">Yardage</ion-label>
+                <ion-input type="text" [(ngModel)]="hole.yardage"></ion-input>
+                <ion-label position="floating">Par</ion-label>
+                <ion-input type="text" [(ngModel)]="hole.par"></ion-input>
+              </ion-item>
+            </ion-card-content>
+          </ion-card-header>
+          <ion-button expand="full" color="medium" size="medium" (click)="nextHole(i)">Next</ion-button>
+        <ion-button expand="full" color="medium" size="medium" (click)="prevHole(i)">Prev</ion-button>
+      </ion-card>
+    </div>
   </div>
   <div class="button-container">
     <ion-button expand="full" color="medium" size="medium" (click)="submit()">Submit</ion-button>
     <ion-button expand="full" color="medium" size="medium" (click)="cancel()">Cancel</ion-button>
   </div>
-</ion-content>
+
